fixed margin error on iPhone:

--- a/css/max-400.css
+++ b/css/max-400.css
@@ -37,8 +37,10 @@
     }
 
     .comment-badge-image {
-        right: 32px;
-        bottom: 20px;
+        right: 8px;
+        bottom: 4px;
+        width: 12px;
+        height: 12px;
     }
 
     .feedback-div {
@@ -171,6 +173,11 @@
         width: 32px;
         height: 32px;
         margin: 4px 8px 4px 4px;
+    }
+
+    .comment-user-image-holder {
+        width: 44px;
+        height: 40px;
     }
 
     .createblahheadlineoption {
